--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:process=":mainProcess"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -30,12 +29,11 @@
             </intent-filter>
         </activity>
 
-        <!--         Receiver from NSClient -->
+        <!--   Receiver from NSClient -->
         <receiver
             android:name="info.nightscout.client.receivers.NSClientDataReceiver"
             android:enabled="true"
-            android:exported="true"
-            android:process=":mainProcess">
+            android:exported="true">
 
             <intent-filter>
                 <action android:name="info.nightscout.client.NEW_TREATMENT" />
