menu, preferences, treatment&wizard buttons, ns upload
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,8 +60,9 @@
         <!-- Service processing incomming data -->
         <service
             android:name=".Services.DataService"
-            android:exported="false"></service>
+            android:exported="false" />
 
+        <activity android:name=".PreferencesActivity"></activity>
     </application>
 
 </manifest>
