add source selection xdrip/nsclient
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
 
         <!-- Receiver from NSClient -->
         <receiver
-            android:name="info.nightscout.client.receivers.NSClientDataReceiver"
+            android:name=".receivers.NSClientDataReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
