--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
         applicationId "info.nightscout.androidaps"
         minSdkVersion 21
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 1002
+        versionName "1.0.02"
     }
     buildTypes {
         release {
@@ -37,10 +37,15 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.7@aar') {
+        transitive = true;
+    }
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:support-v4:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:gridlayout-v7:23.4.0'
+    compile 'com.wdullaer:materialdatetimepicker:2.3.0'
     compile 'com.squareup:otto:1.3.7'
     compile 'com.j256.ormlite:ormlite-core:4.46'
     compile 'com.j256.ormlite:ormlite-android:4.46'
@@ -48,7 +53,4 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'com.jjoe64:graphview:4.0.1'
     compile 'com.eclipsesource.j2v8:j2v8:3.1.6@aar'
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.7@aar') {
-        transitive = true;
-    }
 }
