--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.12'
     compile 'com.jjoe64:graphview:4.0.1'
     compile 'com.eclipsesource.j2v8:j2v8:3.1.6@aar'
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.1'
 }
